# cmake-kconfig

./: CMakeLists.txt  Kconfig
apps/: CMakeLists.txt
apps/receiver/: CMakeLists.txt
apps/receiver/src/: main.cpp
apps/sender/: CMakeLists.txt
apps/sender/include/: crtp.h
apps/sender/src/: main.cpp
cmake/: helper.cmake  kconfig.cmake  top.cmake
configs/: .config  .config.old  Kconfig
example/app/: CMakeLists.txt
example/app/src/: main.cpp
example/lib/: CMakeLists.txt
example/lib/module_1/: CMakeLists.txt
example/lib/module_1/include/: module_1.hpp
example/lib/module_1/src/: module_1.cpp
example/lib/module_2/include/: module_2.hpp
example/lib/modules/: CMakeLists.txt
example/lib/modules/module_1/include/: module_1.hpp
example/lib/modules/module_2/: CMakeLists.txt
example/lib/modules/module_2/include/: module_2.hpp
example/lib/modules/module_2/src/: module_2.cpp
python_scripts/kconfiglib/: genconfig.py
